---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ????
  Bugfixes:
    - Fixed crash when entering misc signal values outside bounds of signed int (#37)
    - Fixed misc signal input values not getting cleared when confirming or resetting input (#38)
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2023-05-07
  Bugfixes:
    - Typos correction.
    - Update description for disable service settings
    - Blueprints created in pre-2.0 versions of the mod will now properly retain threshold values
    - Fixed multi-player crash when combinator is removed while someone else has it open.
  Changes:
    - Updated setting names and descriptions for disabling station servers when a combinator is
      built.
    - Updated Mod Description on portal to better explain how disabling services work and why they
      work that way.  If the combinator is off these functions don't work and a station will be both
      a requester and provider.
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2023-05-03
  Bugfixes:
    - Fix crash when pasting after the copy source has been removed. 
    - Forgot datestamp in changelog..  Bumped version as a result
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2023-05-01
  Bugfixes:
    - Fixed 2.0.0 migration issue that can result in lost thresholds when placing blueprints from
      migrated combinators (or copy paste)
  Features:
    - Added a command to "disable: the requester service on all combinators that do not have a
      negative item or fluid signal configured.

      This version of the combinator more accurately reflects how the signals are controlling